# Mahiru

./: .gitignore  README.md  pyproject.toml  requirements.txt  sample_config.toml
mahiru/: __init__.py  __main__.py  mahiru.py
mahiru/lang/: en.py  id.py
mahiru/plugins/: admin.py  dev.py  misc.py  sudo.py  waifu.py  whatanime.py
mahiru/util/: filters.py  misc.py  system.py  time.py
