[tool.poetry]
name = "mahiru"
version = "0.1.0"
description = ""
authors = ["wulan17 <wulan17@nusantararom.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~=3.10"
pyrofork = "^2.3.16.post5"
TgCrypto = "^1.2.5"
uvloop = "^0.19.0"
async-pymongo = "^0.1.4"
tomli = "^2.0.1"
colorlog = "^6.8.0"
meval = "^2.5"
apscheduler = {git = "https://github.com/agronholm/apscheduler.git", rev = "a13fb440589014bd8e6555f43a12a02cb83a156a"}
pendulum = "^3.0.0"
httpx = {extras = ["http2"], version = "^0.26.0"}
aiofiles = "^23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
